--- a/pickle_fuzz_reboot/src/index.css
+++ b/pickle_fuzz_reboot/src/index.css
@@ -13,6 +13,32 @@
 --cream: rgb(255, 251, 239);
 }
 
+/* --------------- Header Image --------------- */
+.header-background { 
+  background-color: var(--ltpurple);
+}
+
+.header-container {
+  display: flex;
+  justify-content: center;
+  background-color: var(--ltpurple);
+}
+
+.header-text {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-size: 65px;
+  font-weight: bolder;
+  color: var(--cream);
+  margin-bottom: 20px;
+}
+
+.header-image {
+  width: 70%;
+  border-radius: 0 !important;
+}
+
 /* ---------------- Products ------------------ */
 .products-container {
   background-color: var(--ltpurple);
@@ -34,7 +60,7 @@
   /* border: 7px solid var(--ltpurple) !important; */
   margin-left: 20px;
   margin-right: 20px;
-  margin-top: 20px;
+  margin-top: 30px;
   margin-bottom: 20px;
 }
 
