adding to contact.js

--- a/pickle_fuzz_reboot/src/index.css
+++ b/pickle_fuzz_reboot/src/index.css
@@ -117,15 +117,24 @@
 /* ---------------- Products ------------------ */
 .products-container {
   background-color: var(--ltpurple);
-  display: flex;
+  display: block;
   justify-content: center;
+  text-align: center;
+  align-items: center
+}
+
+.products-heading {
+  font-size: 40px;
+  font-weight: bold;
+  color: var(--cream);
 }
 
 .card-container {
   display: flex;
   justify-content: center;
+  align-items: center;
+  text-align: center;
   flex-wrap: wrap;
-  width: 90%;
   margin-left: 20px;
   margin-right: 20px;
 }
@@ -186,4 +195,54 @@
 .product-button:hover {
   background-color: var(--ltpurple) !important;
   color: var(--cream);
+}
+
+/* -------------------- CONTACT ------------------------ */
+
+.contact-container {
+  display: block;
+  background-color: var(--ltpurple);
+}
+
+.contactme-text {
+  display: flex;
+  justify-content: center;
+  font-size: 40px;
+  color: var(--cream);
+  background-color: var(--ltpurple);
+  font-weight: bold;
+}
+
+.touch-text  {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 20px;
+  font-weight: bold;
+  color: var(--pink);
+}
+
+.contact-text {
+  color: var(--yellow);
+  font-weight: bold !important;
+}
+
+.contact-input {
+  color: var(--cream);
+  background-color: var(--teal) !important;
+  font-weight: bolder
+}
+
+.contact-button {
+  margin-top: 20px;
+  margin-bottom: 50px;
+  font-weight: bold !important;
+  background-color: var(--yellow) !important;
+  color: var(--cream)
+}
+
+.contact-button:hover {
+  box-shadow: -1px 3px 20px var(--yellow);
+  transition: transform 100ms;
 }
