--- a/pickle_fuzz_reboot/src/index.css
+++ b/pickle_fuzz_reboot/src/index.css
@@ -87,20 +87,22 @@
 }
 
 .icon-btns {
+  display: flex;
+  justify-content: right;
+  text-align: right;
   margin-top: 20px;
   margin-bottom: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
-  justify-content: flex-end;
   font-size: 20px !important;
   font-weight: bolder !important;
-  background-color: none !important;
+  margin-left: auto;
+  margin-right: 40px;
 }
+
 
 .shopping-cart {
   color: var(--dkpurple);
   background-color: var(--cream) !important;
-  margin-right: 20px;
+  margin-right: 30px;
 }
 
 .shopping-cart:hover {
@@ -113,6 +115,10 @@
   margin-right: 20px;
 }
 
+.instagram:hover {
+  color: var(--ltpurple);
+}
+
 
 /* ---------------- Products ------------------ */
 .products-container {
@@ -120,11 +126,11 @@
   display: block;
   justify-content: center;
   text-align: center;
-  align-items: center
+  align-items: center;
 }
 
 .products-heading {
-  font-size: 40px;
+  font-size: 45px;
   font-weight: bold;
   color: var(--cream);
 }
@@ -207,7 +213,7 @@
 }
 
 .faq-heading {
-  font-size: 40px;
+  font-size: 45px;
   font-weight: bold;
   color: var(--cream);
 }
@@ -222,10 +228,16 @@
   text-align: center;
   margin-top: 40px;
   margin-bottom: 40px;
-  background-color: var(--teal);
+  background-color: var(--dkpurple);
+  border-radius: 5px !important;
   color: var(--cream);
   font-weight: bolder !important;
   font-size: 20px !important;
+}
+
+.accordion-panel {
+  border-radius: 5px !important;
+  border-color: var(--cream) !important ;
 }
 
 /* -------------------- CONTACT ------------------------ */
@@ -241,6 +253,7 @@
   display: flex;
   align-content: center;
   height: 350px;
+  border: 8px solid var(--dkpurple);
 }
 
 .contact-container {
@@ -251,7 +264,7 @@
 .contactme-text {
   display: flex;
   justify-content: center;
-  font-size: 40px;
+  font-size: 45px;
   color: var(--cream);
   background-color: var(--ltpurple);
   font-weight: bold;
@@ -264,7 +277,7 @@
   margin-bottom: 20px;
   font-size: 20px;
   font-weight: bold;
-  color: var(--pink);
+  color: var(--teal);
 }
 
 .contact-text {
@@ -289,4 +302,32 @@
 .contact-button:hover {
   box-shadow: -1px 3px 20px var(--yellow);
   transition: transform 100ms;
+}
+
+/* ------------------------- FOOTER --------------------------- */
+
+.footer-image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: var(--ltpurple);
+}
+
+.footer_image {
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  height: 150px;
+  margin-left: 40px
+}
+
+.thanks_text {
+  display: flex;
+  justify-content: center;
+  background-color: var(--ltpurple);
+  color: var(--cream);
+  font-size: 20px;
+  font-weight: bolder;
 }
